# SwingMotionPro

./: .dockerignore  Dockerfile  Makefile  Notes.md  Procfile  README.md  app.py  fly.toml  nohup.out  pyproject.toml  restart_machines
.devcontainer/: devcontainer.json  init_env.sh  install-flyctl.sh  install-uv.sh  post-create.sh
app/: __init__.py  app.py  auth.py  config.py  db.py  logging.yaml  logging_config.py  logout.py  upload.py
app/pages/: .upload.py  admin.py  login.py  logout.py  upload.py  welcome.py
app/utils/: csv_format_mappings.py  csv_upload_handler.py  id_helpers.py  session_helpers.py
schema/: schema.sql
scripts/: create_hash.py  dev_start_db_proxy.sh  drop_all.py  init_db.py  setup-postgres.sh  start_dev.sh
